refactor: Simplify initial 'o' vowel handling in the phonetic parser by removing a specific override and relying on general vowel mapping.

--- a/data/mapping.json
+++ b/data/mapping.json
@@ -12,8 +12,8 @@
         "e": "এ",
         "E": "এ",
         "oi": "ঐ",
-        "o": "ও",
-        "O": "ও",
+        "o": "অ",
+        "oo": "ও",
         "ou": "ঔ",
         "rri": "ঋ",
         "1": "১",
@@ -53,7 +53,7 @@
         "bh": "ভ",
         "v": "ভ",
         "m": "ম",
-        "z": "জ",
+        "z": "য",
         "r": "র",
         "l": "ল",
         "sh": "শ",
@@ -65,10 +65,12 @@
         "tt": "ট",
         "tth": "ঠ",
         "dd": "ড",
-        "ddh": "দ্ধ",
+        "ddh": "ঢ",
         "N": "ণ",
+        "nn": "ণ",
         "NG": "ঙ",
         "NGV": "ঞ",
+        "nngv": "ঞ",
         "q": "ৎ",
         "J": "য",
         "kkh": "ক্ষ",
@@ -106,6 +108,8 @@
         "e": "ে",
         "oi": "ৈ",
         "o": "ো",
+        "oo": "ো",
+        "O": "ো",
         "ou": "ৌ",
         "rri": "ৃ"
     },
